#ajuste confirmacao de senha

--- a/app/teste.html
+++ b/app/teste.html
@@ -28,7 +28,7 @@
         <span></span>
         Entrar
       </a>
-      <a class="cad"    href="cad.html">
+      <a class="cad"    href="cad.php">
         <span></span>
         <span></span>
         <span></span>
